# Formula

./: README.md
examples/closure/: closed_upvalue  closed_upvalue.lua  open_upvalue  open_upvalue.lua  syntax_sugar  transitive_upvalue  transitive_upvalue.lua
examples/function/: call-in-exprlist  call-in-exprlist.lua  call-with-excess-args  call-with-fewer-args  func-as-result1  func-as-result2  func-as-result3  func-with-params  func-with-params.lua  func-without-param  func-without-param.lua
examples/statement/: boolean-expression  forstmt-ascend  forstmt-ascend.lua  forstmt-descend  forstmt-descend.lua  ifstmt  ifstmt.lua  while-stmt  while-stmt.lua
src/interpreter/: CMakeLists.txt  interpreter.pro  main.cpp
src/interpreter/backend/: Code.cpp  Code.h  Function.cpp  Function.h  Operand.cpp  Operand.h  VM.cpp  VM.h
src/interpreter/frontend/: CodeGen.cpp  CodeGen.h  Semantic.cpp  Semantic.h  lexer.l  parser.y
